--- a/style/style_contact_us.css
+++ b/style/style_contact_us.css
@@ -64,7 +64,7 @@ input[type=submit]:hover {
 }
 
 /* Create two columns that float next to eachother */
-.column {
+.columncontact {
   float: left;
   width: 50%;
   margin-top: 6px;
@@ -72,7 +72,7 @@ input[type=submit]:hover {
 }
 
 /* Clear floats after the columns */
-.row:after {
+.rowcontact:after {
   content: "";
   display: table;
   clear: both;
